@@ -1,3 +1,6 @@
+- fix counting for erasures
+- restore quiet behavior for erasures when not in verbose mode
+
 Version 7.16 - 3 February 2013, by Thierry Vignaud
 
 - add basic support for detecting I/O error
